# sdl2codes

./: sdl2.code-workspace
AlgorithmSort/: makefile
AlgorithmSort/src/: display.c  display.h  main.c
AlgorithmViewer/: makefile
AlgorithmViewer/src/: display.c  display.h  gui.c  gui.h  label.c  label.h  main.c  structure.c  structure.h
Space-Invaders/: CMakeLists.txt  makefile
Space-Invaders/src/: display.c  display.h  enemy.c  enemy.h  label.c  label.h  logs.c  logs.h  main.c  player.c  player.h  projectile.c  projectile.h  transform.h
SpriteAnimation/: makefile
SpriteAnimation/src/: animation.h  background.c  background.h  display.c  display.h  main.c  particles.c  particles.h  plants.c  plants.h  transform.h
StarDungeon/assets/img/: mapa.aseprite
StarDungeon/src/: animation.c  animation.h  background.c  background.h  camera.c  camera.h  constants.h  display.c  display.h  main.c  player.c  player.h  tileset.c  tileset.h  transform.h
